apps/qbittorrent/oauth2-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-oauth2-proxy
  namespace: qbittorrent
spec:
  selector:
    app: qbittorrent-oauth2-proxy
  ports:
    - name: http
      port: 4180
      targetPort: 4180
